--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     </activity>
 
     <service
-      android:name=".BundelNotificationListenerService"
+      android:name=".notifications.BundelNotificationListenerService"
       android:label="@string/service_name"
       android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
       android:exported="true">
