--- a/.github/workflows/buildbot.yml
+++ b/.github/workflows/buildbot.yml
@@ -11,8 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: set up JDK 11
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
@@ -34,15 +35,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: set up JDK 11
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Check with Gradle
+      - name: Run tests with Gradle
         uses: eskatos/gradle-command-action@v1.3.3
         with:
           arguments: test
