--- a/build-config/detekt.yml
+++ b/build-config/detekt.yml
@@ -154,6 +154,9 @@ style:
     active: true
   UnusedImports:
     active: true
+  UnusedPrivateMember:
+    # We need to disable this otherwise we'd need to @Suppress all Composable previews...
+    active: false
   UseArrayLiteralsInAnnotations:
     active: true
   UseCheckNotNull:
