--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     android:supportsRtl="true"
     android:label="@string/app_name"
     android:theme="@style/Bundel.Theme"
-    android:icon="@mipmap/ic_launcher"
+    android:icon="@mipmap/ic_bundel_launcher"
     android:name=".BundelApplication">
 
     <activity
