--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  package="dev.sebastiano.bundel">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="dev.sebastiano.bundel">
 
-  <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
-    tools:ignore="QueryAllPackagesPermission" />
+    <uses-permission
+        android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
 
-  <application
-    android:allowBackup="false"
-    android:supportsRtl="true"
-    android:label="@string/app_name"
-    android:theme="@style/Bundel.Theme"
-    android:icon="@mipmap/ic_bundel_launcher"
-    android:name=".BundelApplication">
+    <application
+        android:name=".BundelApplication"
+        android:theme="@style/Bundel.Theme"
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_bundel_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true">
 
-    <activity
-      android:name=".MainActivity"
-      android:label="@string/app_name"
-      android:exported="true">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-    <service
-      android:name=".notifications.BundelNotificationListenerService"
-      android:label="@string/service_name"
-      android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
-      android:exported="true">
-      <intent-filter>
-        <action android:name="android.service.notification.NotificationListenerService" />
-      </intent-filter>
+        <service
+            android:name=".notifications.BundelNotificationListenerService"
+            android:exported="true"
+            android:label="@string/service_name"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+
             <meta-data
-              android:name="android.service.notification.default_filter_types"
-              android:value="1,2">
-            </meta-data>
+                android:name="android.service.notification.default_filter_types"
+                android:value="1,2" />
             <meta-data
-              android:name="android.service.notification.disabled_filter_types"
-              android:value="8">
-            </meta-data>
-    </service>
-  </application>
+                android:name="android.service.notification.disabled_filter_types"
+                android:value="8" />
+        </service>
+    </application>
 </manifest>
