--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
             <meta-data
                 android:name="android.service.notification.disabled_filter_types"
                 android:value="8" />
+            <meta-data
+                android:name="firebase_crashlytics_collection_enabled"
+                android:value="false" />
         </service>
     </application>
 </manifest>
