--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,20 @@
 [versions]
-accompanist="0.10.0"
-activityCompose="1.3.0-alpha08"
-appCompat="1.3.0"
-coil="1.2.1"
-compose="1.0.0-beta07"
+accompanist="0.11.1"
+activityCompose="1.3.0-beta01"
+appCompat="1.4.0-alpha02"
+coil="1.2.2"
+compose="1.0.0-beta08"
 daggerHilt="2.36"
 gradlePlugins-agp="7.0.0-beta03"
-gradlePlugins-crashlytics="2.6.1"
+gradlePlugins-crashlytics="2.7.0"
 gradlePlugins-gms="4.3.8"
 hilt="1.0.0"
 hiltLifecycleViewmodel="1.0.0-alpha03"
 hiltNavigationCompose="1.0.0-alpha02"
-kotlin="1.4.32"
+kotlin="1.5.10"
 lifecycle="2.4.0-alpha01"
-navigationCompose="2.4.0-alpha01"
+lifecycleViewmodelCompose="1.0.0-alpha06"
+navigationCompose="2.4.0-alpha02"
 room="2.4.0-alpha02"
 timber="4.7.1"
 
@@ -32,7 +33,7 @@ androidx-hilt-hiltCompiler={ module="androidx.hilt:hilt-compiler", version.ref="
 androidx-hilt-hiltLifecycleViewmodel={ module="androidx.hilt:hilt-lifecycle-viewmodel", version.ref="hiltLifecycleViewmodel" }
 androidx-hilt-hiltNavigationCompose={ module="androidx.hilt:hilt-navigation-compose", version.ref="hiltNavigationCompose" }
 androidx-lifecycle-lifecycleRuntimeKtx={ module="androidx.lifecycle:lifecycle-runtime-ktx", version.ref="lifecycle" }
-androidx-lifecycle-lifecycleViewmodelCompose={ module="androidx.lifecycle:lifecycle-viewmodel-compose", version.ref="compose" }
+androidx-lifecycle-lifecycleViewmodelCompose={ module="androidx.lifecycle:lifecycle-viewmodel-compose", version.ref="lifecycleViewmodelCompose" }
 androidx-navigation-navigationCompose={ module="androidx.navigation:navigation-compose", version.ref="navigationCompose" }
 androidx-room-roomCompiler={ module="androidx.room:room-compiler", version.ref="room" }
 androidx-room-roomKtx={ module="androidx.room:room-ktx", version.ref="room" }
