--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,6 +40,7 @@ androidx-room-roomKtx={ module="androidx.room:room-ktx", version.ref="room" }
 androidx-room-roomRuntime={ module="androidx.room:room-runtime", version.ref="room" }
 coilKt-coil={ module="io.coil-kt:coil", version.ref="coil" }
 google-accompanistCoil={ module="com.google.accompanist:accompanist-coil", version.ref="accompanist" }
+google-accompanistFlowLayout={ module="com.google.accompanist:accompanist-flowlayout", version.ref="accompanist" }
 google-accompanistPager={ module="com.google.accompanist:accompanist-pager", version.ref="accompanist" }
 google-accompanistPagerIndicators={ module="com.google.accompanist:accompanist-pager-indicators", version.ref="accompanist" }
 google-accompanistSystemUIController={ module="com.google.accompanist:accompanist-systemuicontroller", version.ref="accompanist" }
@@ -55,7 +56,7 @@ gradlePlugins-kotlin={ module="org.jetbrains.kotlin:kotlin-gradle-plugin", versi
 jakes-timber-timber={ module="com.jakewharton.timber:timber", version.ref="timber" }
 
 [bundles]
-accompanist=["google-accompanistCoil", "google-accompanistPager", "google-accompanistPagerIndicators", "google-accompanistSystemUIController"]
+accompanist=["google-accompanistCoil", "google-accompanistFlowLayout", "google-accompanistPager", "google-accompanistPagerIndicators", "google-accompanistSystemUIController"]
 compose=["androidx-compose-compiler", "androidx-compose-foundation", "androidx-compose-material", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui", "androidx-compose-uiTooling"]
 hilt=["google-dagger-dagger", "google-dagger-hiltAndroid", "androidx-hilt-hiltCommon", "androidx-hilt-hiltLifecycleViewmodel"]
 hiltKapt=["google-dagger-daggerCompiler", "google-dagger-hiltCompiler", "androidx-hilt-hiltCompiler"]
