--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 accompanist="0.12.0"
 activityCompose="1.3.0-beta02"
 appCompat="1.4.0-alpha02"
+assertk="0.24"
 coil="1.2.2"
 compose="1.0.0-beta09"
 daggerHilt="2.37"
@@ -10,6 +11,8 @@ desugar="1.1.5"
 gradlePlugins-agp="7.0.0-beta03"
 gradlePlugins-crashlytics="2.7.0"
 gradlePlugins-gms="4.3.8"
+gradlePlugins-junit5="1.7.1.1"
+junit="5.7.2"
 hilt="1.0.0"
 hiltLifecycleViewmodel="1.0.0-alpha03"
 hiltNavigationCompose="1.0.0-alpha03"
@@ -40,6 +43,7 @@ androidx-navigation-navigationCompose={ module="androidx.navigation:navigation-c
 androidx-room-roomCompiler={ module="androidx.room:room-compiler", version.ref="room" }
 androidx-room-roomKtx={ module="androidx.room:room-ktx", version.ref="room" }
 androidx-room-roomRuntime={ module="androidx.room:room-runtime", version.ref="room" }
+assertk={ module="com.willowtreeapps.assertk:assertk", version.ref="assertk" }
 com-android-tools-desugar={ module="com.android.tools:desugar_jdk_libs", version.ref="desugar" }
 coilKt-coil={ module="io.coil-kt:coil", version.ref="coil" }
 google-accompanistCoil={ module="com.google.accompanist:accompanist-coil", version.ref="accompanist" }
@@ -55,9 +59,12 @@ gradlePlugins-android={ module="com.android.tools.build:gradle", version.ref="gr
 gradlePlugins-crashlytics={ module="com.google.firebase:firebase-crashlytics-gradle", version.ref="gradlePlugins-crashlytics" }
 gradlePlugins-gms={ module="com.google.gms:google-services", version.ref="gradlePlugins-gms" }
 gradlePlugins-hilt={ module="com.google.dagger:hilt-android-gradle-plugin", version.ref="daggerHilt" }
+gradlePlugins-junit5={ module="de.mannodermaus.gradle.plugins:android-junit5", version.ref="gradlePlugins-junit5" }
 gradlePlugins-kotlin={ module="org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref="kotlin" }
 io-github-vanpra-dialogs-datetime={ module="io.github.vanpra.compose-material-dialogs:datetime", version.ref="datetime-dialogs" }
 jakes-timber-timber={ module="com.jakewharton.timber:timber", version.ref="timber" }
+junit-jupiter-api={ module="org.junit.jupiter:junit-jupiter-api", version.ref="junit"}
+junit-jupiter-engine={ module="org.junit.jupiter:junit-jupiter-engine", version.ref="junit"}
 
 [bundles]
 accompanist=["google-accompanistCoil", "google-accompanistFlowLayout", "google-accompanistPager", "google-accompanistPagerIndicators", "google-accompanistSystemUIController"]
