--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-accompanist="0.12.0"
+accompanist="0.13.0"
 activityCompose="1.3.0-beta02"
 appCompat="1.4.0-alpha02"
 assertk="0.24"
 coil="1.2.2"
-compose="1.0.0-beta09"
+compose="1.0.0-rc01"
 daggerHilt="2.37"
 datastore="1.0.0-beta02"
 datetime-dialogs="0.4.3"
