--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ daggerHilt="2.37"
 datastore="1.0.0-rc01"
 datetime-dialogs="0.4.3"
 desugar="1.1.5"
-gradlePlugins-agp="7.0.0-beta05"
+gradlePlugins-agp="7.0.0-rc01"
 gradlePlugins-crashlytics="2.7.1"
 gradlePlugins-detekt="1.17.1"
 gradlePlugins-gms="4.3.8"
