--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,13 +4,13 @@ activityCompose="1.3.0-beta02"
 appCompat="1.4.0-alpha03"
 assertk="0.24"
 coil="1.2.2"
-compose="1.0.0-rc01"
+compose="1.0.0"
 composeUiTooling="1.0.0-beta09"
 daggerHilt="2.37"
 datastore="1.0.0-rc01"
 datetime-dialogs="0.4.3"
 desugar="1.1.5"
-gradlePlugins-agp="7.0.0-rc01"
+gradlePlugins-agp="7.0.0"
 gradlePlugins-crashlytics="2.7.1"
 gradlePlugins-detekt="1.17.1"
 gradlePlugins-gms="4.3.8"
