--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,22 @@
 [versions]
-accompanist="0.13.0"
-activityCompose="1.3.0-beta02"
+accompanist="0.15.0"
+activityCompose="1.3.0"
 appCompat="1.4.0-alpha03"
 assertk="0.24"
-coil="1.2.2"
+coil="1.3.1"
 compose="1.0.0"
-composeUiTooling="1.0.0-beta09"
-daggerHilt="2.37"
-datastore="1.0.0-rc01"
-datetime-dialogs="0.4.3"
+daggerHilt="2.38.1"
+datastore="1.0.0-rc02"
 desugar="1.1.5"
+firebaseBom="28.3.0"
 gradlePlugins-agp="7.0.0"
 gradlePlugins-crashlytics="2.7.1"
 gradlePlugins-detekt="1.17.1"
 gradlePlugins-gms="4.3.8"
 gradlePlugins-junit5="1.7.1.1"
 gradlePlugins-kotlinter="3.4.5"
-gradlePlugins-protobuf="0.8.16"
+gradlePlugins-protobuf="0.8.17"
 gradlePlugins-versionsBenManes="0.39.0"
-firebaseBom="28.2.0"
 junit="5.7.2"
 hilt="1.0.0"
 hiltLifecycleViewmodel="1.0.0-alpha03"
@@ -27,9 +25,9 @@ kotlin="1.5.10"
 kotlinCoroutines="1.5.0"
 lifecycle="2.4.0-alpha02"
 lifecycleViewmodelCompose="1.0.0-alpha07"
-navigationCompose="2.4.0-alpha04"
+navigationCompose="2.4.0-alpha05"
 protobuf="3.10.0"
-room="2.4.0-alpha03"
+room="2.4.0-alpha04"
 timber="4.7.1"
 
 [libraries]
@@ -41,7 +39,7 @@ androidx-compose-material={ module="androidx.compose.material:material", version
 androidx-compose-materialIconsExtended={ module="androidx.compose.material:material-icons-extended", version.ref="compose" }
 androidx-compose-runtimeLivedata={ module="androidx.compose.runtime:runtime-livedata", version.ref="compose" }
 androidx-compose-ui={ module="androidx.compose.ui:ui", version.ref="compose" }
-androidx-compose-uiTooling={ module="androidx.compose.ui:ui-tooling", version.ref="composeUiTooling" }
+androidx-compose-uiTooling={ module="androidx.compose.ui:ui-tooling", version.ref="compose" }
 androidx-compose-uiTest-manifest={ module="androidx.compose.ui:ui-test-manifest", version.ref="compose" }
 androidx-compose-uiTest-junit4={ module="androidx.compose.ui:ui-test-junit4", version.ref="compose" }
 androidx-datastore={ module="androidx.datastore:datastore", version.ref="datastore" }
@@ -81,7 +79,6 @@ gradlePlugins-kotlin={ module="org.jetbrains.kotlin:kotlin-gradle-plugin", versi
 gradlePlugins-kotlinter={ module="org.jmailen.gradle:kotlinter-gradle", version.ref="gradlePlugins-kotlinter" }
 gradlePlugins-protobuf={ module="gradle.plugin.com.google.protobuf:protobuf-gradle-plugin", version.ref="gradlePlugins-protobuf" }
 gradlePlugins-versionsBenManes={ module="com.github.ben-manes:gradle-versions-plugin", version.ref="gradlePlugins-versionsBenManes" }
-io-github-vanpra-dialogs-datetime={ module="io.github.vanpra.compose-material-dialogs:datetime", version.ref="datetime-dialogs" }
 jakes-timber-timber={ module="com.jakewharton.timber:timber", version.ref="timber" }
 junit-jupiter-api={ module="org.junit.jupiter:junit-jupiter-api", version.ref="junit"}
 junit-jupiter-engine={ module="org.junit.jupiter:junit-jupiter-engine", version.ref="junit"}
