--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,34 +1,34 @@
 [versions]
-accompanist="0.15.0"
-activityCompose="1.3.0"
+accompanist="0.16.1"
+activityCompose="1.3.1"
 appCompat="1.4.0-alpha03"
 assertk="0.24"
-coil="1.3.1"
-compose="1.0.0"
+coil="1.3.2"
+compose="1.0.1"
 daggerHilt="2.38.1"
-datastore="1.0.0-rc02"
+datastore="1.0.0"
 desugar="1.1.5"
-firebaseBom="28.3.0"
+firebaseBom="28.3.1"
 gradlePlugins-agp="7.0.0"
 gradlePlugins-crashlytics="2.7.1"
 gradlePlugins-detekt="1.17.1"
-gradlePlugins-gms="4.3.8"
+gradlePlugins-gms="4.3.10"
 gradlePlugins-junit5="1.7.1.1"
-gradlePlugins-kotlinter="3.4.5"
+gradlePlugins-kotlinter="3.5.0"
 gradlePlugins-protobuf="0.8.17"
 gradlePlugins-versionsBenManes="0.39.0"
 junit="5.7.2"
 hilt="1.0.0"
 hiltLifecycleViewmodel="1.0.0-alpha03"
 hiltNavigationCompose="1.0.0-alpha03"
-kotlin="1.5.10"
+kotlin="1.5.21"
 kotlinCoroutines="1.5.0"
-lifecycle="2.4.0-alpha02"
+lifecycle="2.4.0-alpha03"
 lifecycleViewmodelCompose="1.0.0-alpha07"
-navigationCompose="2.4.0-alpha05"
+navigationCompose="2.4.0-alpha06"
 protobuf="3.10.0"
 room="2.4.0-alpha04"
-timber="4.7.1"
+timber="5.0.1"
 
 [libraries]
 androidx-activity-activityCompose={ module="androidx.activity:activity-compose", version.ref="activityCompose" }
@@ -55,8 +55,7 @@ androidx-room-roomKtx={ module="androidx.room:room-ktx", version.ref="room" }
 androidx-room-roomRuntime={ module="androidx.room:room-runtime", version.ref="room" }
 assertk={ module="com.willowtreeapps.assertk:assertk", version.ref="assertk" }
 com-android-tools-desugar={ module="com.android.tools:desugar_jdk_libs", version.ref="desugar" }
-coilKt-coil={ module="io.coil-kt:coil", version.ref="coil" }
-google-accompanistCoil={ module="com.google.accompanist:accompanist-coil", version.ref="accompanist" }
+coilKt-coil-compose={ module="io.coil-kt:coil-compose", version.ref="coil" }
 google-accompanistFlowLayout={ module="com.google.accompanist:accompanist-flowlayout", version.ref="accompanist" }
 google-accompanistPager={ module="com.google.accompanist:accompanist-pager", version.ref="accompanist" }
 google-accompanistPagerIndicators={ module="com.google.accompanist:accompanist-pager-indicators", version.ref="accompanist" }
@@ -85,7 +84,7 @@ junit-jupiter-engine={ module="org.junit.jupiter:junit-jupiter-engine", version.
 kotlinx-coroutines-test={ module="org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref="kotlinCoroutines" }
 
 [bundles]
-accompanist=["google-accompanistCoil", "google-accompanistFlowLayout", "google-accompanistPager", "google-accompanistPagerIndicators", "google-accompanistSystemUIController"]
+accompanist=["google-accompanistFlowLayout", "google-accompanistPager", "google-accompanistPagerIndicators", "google-accompanistSystemUIController"]
 compose=["androidx-compose-compiler", "androidx-compose-foundation", "androidx-compose-material", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui", "androidx-compose-uiTooling"]
 datastore=["google-protobuf-javalite", "androidx-datastore"]
 firebase=["google-firebase-analytics-ktx", "google-firebase-crashlytics-ktx"]
