--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-accompanist="0.18.0"
+accompanist="0.19.0"
 activityCompose="1.3.1"
 appCompat="1.4.0-alpha03"
 assertk="0.24"
@@ -25,7 +25,7 @@ kotlin="1.5.21"
 kotlinCoroutines="1.5.1"
 lifecycle="2.4.0-alpha03"
 lifecycleViewmodelCompose="1.0.0-alpha07"
-navigationCompose="2.4.0-alpha07"
+navigationCompose="2.4.0-alpha10"
 protobuf="3.10.0"
 room="2.4.0-alpha04"
 timber="5.0.1"
@@ -61,6 +61,7 @@ google-accompanistPager={ module="com.google.accompanist:accompanist-pager", ver
 google-accompanistPagerIndicators={ module="com.google.accompanist:accompanist-pager-indicators", version.ref="accompanist" }
 google-accompanistSystemUIController={ module="com.google.accompanist:accompanist-systemuicontroller", version.ref="accompanist" }
 google-accompanistNavAnimations={ module="com.google.accompanist:accompanist-navigation-animation", version.ref="accompanist" }
+google-accompanistNavMaterial={ module="com.google.accompanist:accompanist-navigation-material", version.ref="accompanist" }
 google-dagger-dagger={ module="com.google.dagger:dagger", version.ref="daggerHilt" }
 google-dagger-daggerCompiler={ module="com.google.dagger:dagger-compiler", version.ref="daggerHilt" }
 google-dagger-hiltAndroid={ module="com.google.dagger:hilt-android", version.ref="daggerHilt" }
@@ -85,7 +86,7 @@ junit-jupiter-engine={ module="org.junit.jupiter:junit-jupiter-engine", version.
 kotlinx-coroutines-test={ module="org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref="kotlinCoroutines" }
 
 [bundles]
-accompanist=["google-accompanistFlowLayout", "google-accompanistPager", "google-accompanistPagerIndicators", "google-accompanistSystemUIController", "google-accompanistNavAnimations"]
+accompanist=["google-accompanistFlowLayout", "google-accompanistPager", "google-accompanistPagerIndicators", "google-accompanistSystemUIController", "google-accompanistNavAnimations", "google-accompanistNavMaterial"]
 compose=["androidx-compose-compiler", "androidx-compose-foundation", "androidx-compose-material", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui", "androidx-compose-uiTooling"]
 datastore=["google-protobuf-javalite", "androidx-datastore"]
 firebase=["google-firebase-analytics-ktx", "google-firebase-crashlytics-ktx"]
