--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist="0.20.0"
-activityCompose="1.3.1"
+activityCompose="1.4.0-rc01"
 appCompat="1.4.0-alpha03"
 assertk="0.24"
 coil="1.3.2"
