--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 accompanist="0.20.0"
 activityCompose="1.4.0-rc01"
-appCompat="1.4.0-alpha03"
+appCompat="1.4.0-beta01"
 assertk="0.24"
 coil="1.3.2"
 compose="1.0.4"
