Update Lifecycle to 2.4.0-rc01

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ hiltLifecycleViewmodel="1.0.0-alpha03"
 hiltNavigationCompose="1.0.0-alpha03"
 kotlin="1.5.31"
 kotlinCoroutines="1.5.1"
-lifecycle="2.4.0-alpha03"
+lifecycle="2.4.0-rc01"
 lifecycleViewmodelCompose="1.0.0-alpha07"
 navigationCompose="2.4.0-alpha10"
 protobuf="3.10.0"
