--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ accompanist="0.20.0"
 activityCompose="1.4.0-rc01"
 appCompat="1.4.0-beta01"
 assertk="0.25"
-coil="1.3.2"
+coil="2.0.0-alpha01"
 compose="1.0.4"
 daggerHilt="2.39.1"
 datastore="1.0.0"
