--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,16 @@
 [versions]
-accompanist="0.20.0"
-activityCompose="1.4.0-rc01"
-appCompat="1.4.0-beta01"
+accompanist="0.21.2-beta"
+activityCompose="1.4.0"
+appCompat="1.4.0-rc01"
 assertk="0.25"
-coil="2.0.0-alpha01"
-compose="1.0.4"
-daggerHilt="2.39.1"
+coil="2.0.0-alpha02"
+compose="1.1.0-beta02"
+daggerHilt="2.40"
 datastore="1.0.0"
 desugar="1.1.5"
-firebaseBom="28.4.2"
+firebaseBom="29.0.0"
 gradlePlugins-agp="7.0.3"
-gradlePlugins-crashlytics="2.7.1"
+gradlePlugins-crashlytics="2.8.0"
 gradlePlugins-detekt="1.18.1"
 gradlePlugins-gms="4.3.10"
 gradlePlugins-junit5="1.8.0.0"
@@ -24,9 +24,9 @@ hiltLifecycleViewmodel="1.0.0-alpha03"
 hiltNavigationCompose="1.0.0-alpha03"
 kotlin="1.5.31"
 kotlinCoroutines="1.5.2"
-lifecycle="2.4.0-rc01"
+lifecycle="2.4.0"
 lifecycleViewmodelCompose="1.0.0-alpha07"
-navigationCompose="2.4.0-alpha10"
+navigationCompose="2.4.0-beta02"
 protobuf="3.10.0"
 room="2.4.0-beta01"
 timber="5.0.1"
