--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,17 @@
 [versions]
-accompanist="0.21.2-beta"
-activityCompose="1.4.0"
-appCompat="1.4.0-rc01"
-assertk="0.25"
-coil="2.0.0-alpha02"
+accompanist = "0.21.2-beta"
+activityCompose = "1.4.0"
+androidx-testExt = "1.1.3"
+androidx-test = "1.4.0"
+appCompat = "1.4.0-rc01"
+assertk = "0.25"
+coil = "2.0.0-alpha02"
 compose = "1.1.0-beta02"
 composeMaterial3 = "1.0.0-alpha01"
 daggerHilt = "2.40"
-datastore="1.0.0"
-desugar="1.1.5"
+datastore = "1.0.0"
+desugar = "1.1.5"
+espresso-core = "3.4.0"
 firebaseBom = "29.0.0"
 glance = "1.0.0-SNAPSHOT"
 gradlePlugins-agp = "7.0.3"
@@ -49,25 +52,30 @@ androidx-compose-uiTest-junit4={ module="androidx.compose.ui:ui-test-junit4", ve
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 androidx-glance = { module = "androidx.glance:glance-appwidget", version.ref = "glance" }
 androidx-hilt-hiltCommon = { module = "androidx.hilt:hilt-common", version.ref = "hilt" }
-androidx-hilt-hiltCompiler={ module="androidx.hilt:hilt-compiler", version.ref="hilt" }
-androidx-hilt-hiltLifecycleViewmodel={ module="androidx.hilt:hilt-lifecycle-viewmodel", version.ref="hiltLifecycleViewmodel" }
-androidx-hilt-hiltNavigationCompose={ module="androidx.hilt:hilt-navigation-compose", version.ref="hiltNavigationCompose" }
-androidx-lifecycle-lifecycleRuntimeKtx={ module="androidx.lifecycle:lifecycle-runtime-ktx", version.ref="lifecycle" }
-androidx-lifecycle-lifecycleViewmodelCompose={ module="androidx.lifecycle:lifecycle-viewmodel-compose", version.ref="lifecycleViewmodelCompose" }
-androidx-navigation-navigationCompose={ module="androidx.navigation:navigation-compose", version.ref="navigationCompose" }
-androidx-room-roomCompiler={ module="androidx.room:room-compiler", version.ref="room" }
-androidx-room-roomKtx={ module="androidx.room:room-ktx", version.ref="room" }
-androidx-room-roomRuntime={ module="androidx.room:room-runtime", version.ref="room" }
-assertk={ module="com.willowtreeapps.assertk:assertk", version.ref="assertk" }
-com-android-tools-desugar={ module="com.android.tools:desugar_jdk_libs", version.ref="desugar" }
-coilKt-coil-compose={ module="io.coil-kt:coil-compose", version.ref="coil" }
-google-accompanistFlowLayout={ module="com.google.accompanist:accompanist-flowlayout", version.ref="accompanist" }
-google-accompanistPager={ module="com.google.accompanist:accompanist-pager", version.ref="accompanist" }
-google-accompanistPagerIndicators={ module="com.google.accompanist:accompanist-pager-indicators", version.ref="accompanist" }
-google-accompanistSystemUIController={ module="com.google.accompanist:accompanist-systemuicontroller", version.ref="accompanist" }
-google-accompanistNavAnimations={ module="com.google.accompanist:accompanist-navigation-animation", version.ref="accompanist" }
-google-accompanistNavMaterial={ module="com.google.accompanist:accompanist-navigation-material", version.ref="accompanist" }
-google-dagger-dagger={ module="com.google.dagger:dagger", version.ref="daggerHilt" }
+androidx-hilt-hiltCompiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt" }
+androidx-hilt-hiltLifecycleViewmodel = { module = "androidx.hilt:hilt-lifecycle-viewmodel", version.ref = "hiltLifecycleViewmodel" }
+androidx-hilt-hiltNavigationCompose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+androidx-lifecycle-lifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-lifecycleViewmodelCompose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
+androidx-navigation-navigationCompose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-room-roomCompiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-room-roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
+androidx-room-roomRuntime = { module = "androidx.room:room-runtime", version.ref = "room" }
+androidx-test = { module = "androidx.test.ext:junit", version.ref = "androidx-testExt" }
+androidx-rules = { module = "androidx.test:rules", version.ref = "androidx-test" }
+androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
+androidx-test-compose-ui-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
+androidx-test-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
+assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "assertk" }
+com-android-tools-desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar" }
+coilKt-coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+google-accompanistFlowLayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanist" }
+google-accompanistPager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanist" }
+google-accompanistPagerIndicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanist" }
+google-accompanistSystemUIController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
+google-accompanistNavAnimations = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
+google-accompanistNavMaterial = { module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist" }
+google-dagger-dagger = { module = "com.google.dagger:dagger", version.ref = "daggerHilt" }
 google-dagger-daggerCompiler={ module="com.google.dagger:dagger-compiler", version.ref="daggerHilt" }
 google-dagger-hiltAndroid={ module="com.google.dagger:hilt-android", version.ref="daggerHilt" }
 google-dagger-hiltCompiler={ module="com.google.dagger:hilt-compiler", version.ref="daggerHilt" }
@@ -94,6 +102,7 @@ kotlinx-coroutines-test={ module="org.jetbrains.kotlinx:kotlinx-coroutines-test"
 [bundles]
 accompanist = ["google-accompanistFlowLayout", "google-accompanistPager", "google-accompanistPagerIndicators", "google-accompanistSystemUIController", "google-accompanistNavAnimations", "google-accompanistNavMaterial"]
 compose = ["androidx-compose-compiler", "androidx-compose-foundation", "androidx-compose-material3", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui", "androidx-compose-uiTooling"]
+compose-test = ["androidx-test", "androidx-rules", "androidx-test-espresso-core", "androidx-test-compose-ui-junit4", "androidx-test-compose-ui-test-manifest"]
 datastore = ["google-protobuf-javalite", "androidx-datastore"]
 firebase=["google-firebase-analytics-ktx", "google-firebase-crashlytics-ktx"]
 hilt=["google-dagger-dagger", "google-dagger-hiltAndroid", "androidx-hilt-hiltCommon", "androidx-hilt-hiltLifecycleViewmodel"]
