--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 accompanist = "0.21.2-beta"
 activityCompose = "1.4.0"
-androidx-testExt = "1.1.3"
-androidx-test = "1.4.0"
+androidx-testExt = "1.1.4-alpha03"
+androidx-test = "1.4.1-alpha03"
 appCompat = "1.4.0-rc01"
 assertk = "0.25"
 coil = "2.0.0-alpha02"
@@ -11,11 +11,11 @@ composeMaterial3 = "1.0.0-alpha01"
 daggerHilt = "2.40"
 datastore = "1.0.0"
 desugar = "1.1.5"
-espresso-core = "3.4.0"
+espresso-core = "3.5.0-alpha03"
 firebaseBom = "29.0.0"
 glance = "1.0.0-SNAPSHOT"
 gradlePlugins-agp = "7.0.3"
-gradlePlugins-crashlytics="2.8.0"
+gradlePlugins-crashlytics = "2.8.0"
 gradlePlugins-detekt="1.18.1"
 gradlePlugins-gms="4.3.10"
 gradlePlugins-junit5="1.8.0.0"
@@ -61,8 +61,9 @@ androidx-navigation-navigationCompose = { module = "androidx.navigation:navigati
 androidx-room-roomCompiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-roomRuntime = { module = "androidx.room:room-runtime", version.ref = "room" }
-androidx-test = { module = "androidx.test.ext:junit", version.ref = "androidx-testExt" }
-androidx-rules = { module = "androidx.test:rules", version.ref = "androidx-test" }
+androidx-test-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-testExt" }
+androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
+androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidx-test" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
 androidx-test-compose-ui-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 androidx-test-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
@@ -102,7 +103,7 @@ kotlinx-coroutines-test={ module="org.jetbrains.kotlinx:kotlinx-coroutines-test"
 [bundles]
 accompanist = ["google-accompanistFlowLayout", "google-accompanistPager", "google-accompanistPagerIndicators", "google-accompanistSystemUIController", "google-accompanistNavAnimations", "google-accompanistNavMaterial"]
 compose = ["androidx-compose-compiler", "androidx-compose-foundation", "androidx-compose-material3", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui", "androidx-compose-uiTooling"]
-compose-test = ["androidx-test", "androidx-rules", "androidx-test-espresso-core", "androidx-test-compose-ui-junit4", "androidx-test-compose-ui-test-manifest"]
+compose-test = ["androidx-test-junit", "androidx-test-core", "androidx-test-rules", "androidx-test-espresso-core", "androidx-test-compose-ui-junit4", "androidx-test-compose-ui-test-manifest"]
 datastore = ["google-protobuf-javalite", "androidx-datastore"]
 firebase=["google-firebase-analytics-ktx", "google-firebase-crashlytics-ktx"]
 hilt=["google-dagger-dagger", "google-dagger-hiltAndroid", "androidx-hilt-hiltCommon", "androidx-hilt-hiltLifecycleViewmodel"]
