Update Detekt to 1.19.0

--- a/build-config/detekt.yml
+++ b/build-config/detekt.yml
@@ -175,3 +175,8 @@ style:
     active: true
   VarCouldBeVal:
     active: true
+
+naming:
+  FunctionNaming:
+    ignoreAnnotated:
+      - Composable
