[WIP] Stuff is broken yay

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx4g -Dkotlin.daemon.jvm.options\="-Xmx4g"
+org.gradle.configureondemand=false
 kotlin.code.style=official
 android.useAndroidX=true
