--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ desugar = "1.1.5"
 espresso-core = "3.5.0-alpha03"
 firebaseBom = "29.0.0"
 glance = "1.0.0-SNAPSHOT"
-gradlePlugins-agp = "7.0.3"
+gradlePlugins-agp = "7.2.0-alpha05"
 gradlePlugins-crashlytics = "2.8.0"
 gradlePlugins-detekt = "1.19.0"
 gradlePlugins-gms = "4.3.10"
